# ouiouibaguette

./: .gitmodules  CMakeLists.txt  README.md
include/: debug.h  dllmain.h  https.h
src/: debug.c  dllmain.c  https.c
